--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
     <!-- Модальное окно подтверждения удаления -->
     <div class="modal deleteModal">
         <p>Вы уверены, что хотите удалить этот тикет?</p>
-        <button class="confirmDeleteButton">Да</button>
-        <button class="cancelDeleteButton">Отмена</button>
+        <button class="confirmButton">Да</button>
+        <button class="cancelButton">Отмена</button>
     </div>
 
 </body>
